# alchemist

./: .gitignore  README.md  config.json  config.py  executor.py  labeling.py  load_labeler.py  main.py  main_multi.py  prompt_template.json  pyproject.toml  test_qwen.py  train_weak_labels.json
modes/: base_mode.py  scriptoriumws_mode.py
wrench/: basemodel.py
wrench/dataset/: __init__.py  basedataset.py  dataset.py  seqdataset.py
wrench/endmodel/: bert_model.py
wrench/labelmodel/: __init__.py  snorkel.py
