[project]
name = "autolf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.57.1",
    "cvxpy>=1.6.6",
    "dotenv>=0.9.9",
    "fire>=0.7.0",
    "flyingsquid>=0.0.0a0",
    "ipykernel>=6.29.5",
    "langchain-anthropic>=0.3.17",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.27",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "openai>=1.92.2",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "pgmpy>=1.0.0",
    "regex>=2024.11.6",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "seqeval>=1.2.2",
    "snorkel>=0.10.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
